--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # added
 videos/
 modules/01-bases-python/exercices/exercices.md
+presence/
+modules/01-bases-python/04-fonctions-optionnel.ipynb
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
